# Imageprocessing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: horizontal_edge.h  module.cpp  module.h
programs/: horizontal_edge.cpp  module.cpp
test/: test_horizontal.cpp
